@@ -1,3 +1,6 @@
+Wed 14 Jul 2021 Aleksey
+	* print 'Nothing to verify' when verifying a hash file without message digest
+
 Sun 11 Jul 2021 Aleksey
 	* Bugfix: fix verification of some hash files containing spaces in file paths
 	* count unparsed lines of a hash file as errors
